优化更新